--- a/content/posts/2021-11-16-3-4.md
+++ b/content/posts/2021-11-16-3-4.md
@@ -5,19 +5,19 @@ categories: ["music"]
 tags: ["music", "music-rhythm", "music-melody"]
 ---
 
-#### 三拍子と四拍子は相互に変換できる
+# 三拍子と四拍子は相互に変換できる
 
 同じメロディを三拍子にも四拍子にも乗せることができます。
 
 **蛍の光** と **別れのワルツ** などが有名です。
 
-#### 不思議
+# 不思議
 
 ですが、これって不思議ですよね。
 
 三拍子と四拍子は全然違うのに、同じメロディを乗せられる…。
 
-#### 仮説
+## 仮説
 
 **強拍** と **弱拍** という概念があります。
 
