heading re-change

--- a/content/posts/2021-11-16-3-4.md
+++ b/content/posts/2021-11-16-3-4.md
@@ -11,13 +11,13 @@ tags: ["music", "music-rhythm", "music-melody"]
 
 **蛍の光** と **別れのワルツ** などが有名です。
 
-## 不思議
+# 不思議
 
 ですが、これって不思議ですよね。
 
 三拍子と四拍子は全然違うのに、同じメロディを乗せられる…。
 
-### 仮説
+## 仮説
 
 **強拍** と **弱拍** という概念があります。
 
