--- a/content/posts/2021-11-16-02-desumasu.md
+++ b/content/posts/2021-11-16-02-desumasu.md
@@ -2,7 +2,7 @@
 title: "ですます調を見直そうと思う"
 date: 2021-11-16
 categories: ["idea"]
-tags: ["idea-text"]
+tags: ["idea","idea-text"]
 draft: false
 ---
 
