change keyword argolydhm

--- a/content/posts/2021-11-16-01-three-four.md
+++ b/content/posts/2021-11-16-01-three-four.md
@@ -3,7 +3,7 @@ title: "三拍子と四拍子を相互に変換できるのが不思議"
 date: 2021-11-16
 categories: ["music"]
 tags: ["music", "music-rhythm", "music-melody"]
-keywords: ["弱","相互","ワルツ","残り","強","光","四拍子","三拍子","構造","概念","別れ","蛍","仮説","原理","メロディ"]
+keywords: ["三拍子","残り","原理","強","構造","仮説","メロディ","概念","四拍子","相互"]
 ---
 
 # 三拍子と四拍子は相互に変換できる
