--- a/content/posts/2021-11-16-02-desumasu.md
+++ b/content/posts/2021-11-16-02-desumasu.md
@@ -3,7 +3,7 @@ title: "ですます調を見直そうと思う"
 date: 2021-11-16
 categories: ["idea"]
 tags: ["idea","idea-text"]
-keywords: ["印象","あと","源氏物語","自体","ます","平仮名","物語","自分","文章","語尾","漢字","言葉","平家","はっぴ"]
+keywords: ["印象","自分","漢字","源氏物語","あと","語尾","言葉","平仮名","はっぴ"]
 draft: false
 ---
 
